--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-validator": "^6.14.1",
     "mongoose": "^6.3.5",
     "nodemon": "^2.0.16"
   }
