--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "express-validator": "^6.14.1",
+    "express-validator": "^6.14.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.5",
+    "typescript": "^4.7.4",
     "nodemon": "^2.0.16"
   }
 }
