--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "mock project to build an IMS subscriber service",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "build": "npx tsc",
+    "start": "node dist/server.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon dist/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Hendson Szeto",
@@ -17,7 +18,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.5",
-    "typescript": "^4.7.4",
-    "nodemon": "^2.0.16"
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.16",
+    "typescript": "^4.7.4"
   }
 }
